Hook into Mac OS X copy buffer

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ bind r respawn-pane -k \; clear-history
 bind x kill-window
 bind C-a last-window
 
+# Hook into Mac OS X copy buffer
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
 set -g status-left ""
 set -g status-right ""
 set -g window-status-current-bg white
