--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 set -g status-left ""
 set -g status-right ""
-set -g window-status-current-bg white
+set -g window-status-current-style bg=white
 set -g history-limit 100000
 set -g mode-keys vi
 
