--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,8 @@ set -g history-limit 100000
 set -g mode-keys vi
 
 bind C-space select-layout main-horizontal
-bind space run ~/bin/tmuxtools/alicelayout
+# Will only work if you `pipx install`; this directory:
+bind space run ~/.local/bin/alicelayout
 bind 0 run "~/bin/tmuxtools/switch-or-create-window 0"
 bind 1 run "~/bin/tmuxtools/switch-or-create-window 1"
 bind 2 run "~/bin/tmuxtools/switch-or-create-window 2"
