--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ bind x kill-window
 bind C-a last-window
 
 # Hook into Mac OS X copy buffer
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 set -g status-left ""
 set -g status-right ""
@@ -33,4 +33,4 @@ bind 8 run "~/tools/tmuxtools/switch-or-create-window 8"
 bind 9 run "~/tools/tmuxtools/switch-or-create-window 9"
 
 # if run as "tmux attach", create a session if one does not already exist
-#new-session -n $HOST
+new-session -n $HOST
