Clone panes on - or |
Rather than opening a blank pane, which is generally not in the right directory and won't clone any useful command invocation if there is one, copy the command and working directory from the active pane when the command is invoked.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 unbind C-b
 unbind %
 set -g prefix C-a
-bind | split-window -h
-bind - split-window -v
+bind | run-shell "CMD=\"#{pane_start_command}\" ; tmux split-window -h -c \"#{pane_current_path}\" \${CMD:+\"$CMD\"}"
+bind - run-shell "CMD=\"#{pane_start_command}\" ; tmux split-window -v -c \"#{pane_current_path}\" \${CMD:+\"\$CMD\"}"
 bind a send-prefix
 bind r respawn-pane -k \; clear-history
 bind x kill-window
