Preserve cwd when creating a new pane with "

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
 unbind %
 set -g prefix C-a
+bind '"' run-shell "tmux split-window -v -c \"#{pane_current_path}\""
 bind | run-shell "CMD=\"#{pane_start_command}\" ; tmux split-window -h -c \"#{pane_current_path}\" \${CMD:+\"$CMD\"}"
 bind - run-shell "CMD=\"#{pane_start_command}\" ; tmux split-window -v -c \"#{pane_current_path}\" \${CMD:+\"\$CMD\"}"
 bind a send-prefix
