Add P keybinding to run powershell

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,3 +34,6 @@ bind 9 run "~/tools/tmuxtools/switch-or-create-window 9"
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
+
+# run powershell in its own pane in the current directory
+bind P run-shell 'tmux split-window  -v -c "#{pane_current_path}" "bash -l -c powershell.exe"'
